fixed wrong link; weird looking links on mobile

--- a/app/static/v0.1/css/view_style.css
+++ b/app/static/v0.1/css/view_style.css
@@ -33,3 +33,11 @@ article
 {
     text-align: left;
 }
+
+@media(orientation:portrait)
+{
+    .page-link
+    {
+        width: 80%;
+    }
+}
